[gd_scene load_steps=4 format=2]

[ext_resource path="res://rooms/generic/up_assist.gd" type="Script" id=1]
[ext_resource path="res://gfx/arrow_yellow.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 4 )

[node name="up_assist" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_up_assist_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_up_assist_body_exited"]
